<resources>
    <string name="app_name">AgendaNFC</string>
    //activity_main
    <string name="btn_iniciar_pantalla">INICIAR SESION</string>
    <string name="btn_registrar_pantalla">REGISTRARSE</string>

    <string name="btn_cancelar">CANCELAR</string>
    <string name="btn_home">MENU PRINCIPAL</string>
    <string name="btn_cerrarsesion">CERRAR SESION</string>

    <string name="btn_aniadirContacto">AÑADIR NUEVO CONTACTO</string>
    <string name="btn_misContacto">MIS CONTACTOS</string>
    <string name="btn_otrasFuncionalidades">OTROS</string>

    <string name="btn_guardarFormu">GUARDAR</string>
    <string name="btn_recuperar">RECUPERAR</string>
    <string name="btn_eliminar">ELIMINAR</string>

    <string name="btn_mas">+</string>

    <string name="BTO_escrTag">ESCRIBE TAG</string>

    <string name="tv_or">Or</string>
    <string name="tv_registrarse">Registrarse</string>
    <string name="tv_iniciarsesion">Iniciar Sesion</string>
    <string name="tv_formulario">Formulario</string>

    <string name="tv_NombreContacto">Nombre :</string>
    <string name="tv_NumTelefono">Número de Teléfono:</string>
    <string name="tv_NumTAppMensajeria">Número de Mensajería:</string>
    <string name="tv_separacion">----------------------------------------------------------------------------------</string>
    <string name="grabarllamada">Grabar Contacto</string>

    <string name="instrucciones_de_uso">Instrucciones de uso:</string>
    <string name="imagen_guia">imagen guia</string>

    <string name="nada"></string>


</resources>