<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesionActivity">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="617dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="57dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvIDiregistrarse"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:gravity="center"
            android:text="@string/tv_iniciarsesion"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:ems="10"
            android:hint="correo"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/contrasenia"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:ems="10"
            android:hint="contrasenia"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irInicio"
                android:text="@string/btn_cancelar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_iniciar_pantalla" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>