<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="359dp"
        android:layout_height="99dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_id_tituloformulario"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:gravity="center"
            android:text="@string/tv_formulario"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="355dp"
        android:layout_height="540dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="41dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:gravity="right">

                <TextView
                    android:id="@+id/textViewNombreContacto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/tv_NombreContacto"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextNombreContacto"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="right"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewNumTelefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:gravity="left"
                        android:padding="5dp"
                        android:text="@string/tv_NumTelefono"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/countryCodePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:ccp_defaultLanguage="SPANISH"
                            app:ccp_defaultNameCode="ES"/>

                        <EditText
                            android:id="@+id/editTextTelefono"
                            android:layout_width="169dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="numberDecimal"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </LinearLayout>
                </LinearLayout>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:gravity="bottom|center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                    <Button
                        android:id="@+id/saveButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:text="@string/btn_guardarFormu" />
                </LinearLayout>

            </TableRow>


        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>